[FEAT] CM-18: implement billing service
