# src/main/java/com/nexym/clinic/domain/speciality/model/Speciality.java
@@ -10,4 +10,5 @@ public class Speciality {
     private Long id;
     private String name;
     private Long appointmentDuration;
+    private Long appointmentFee;
 }
