# src/main/java/com/nexym/clinic/infra/doctor/mapper/DoctorEntityMapper.java
@@ -1,9 +1,11 @@
 package com.nexym.clinic.infra.doctor.mapper;
 
 import com.nexym.clinic.domain.availability.model.Availability;
+import com.nexym.clinic.domain.bill.model.Bill;
 import com.nexym.clinic.domain.doctor.model.Doctor;
 import com.nexym.clinic.domain.doctor.model.DoctorList;
 import com.nexym.clinic.infra.availability.entity.AvailabilityEntity;
+import com.nexym.clinic.infra.bill.entity.BillEntity;
 import com.nexym.clinic.infra.doctor.entity.DoctorEntity;
 import com.nexym.clinic.infra.speciality.entity.SpecialityEntity;
 import com.nexym.clinic.infra.user.entity.UserEntity;
@@ -63,9 +65,19 @@ public interface DoctorEntityMapper {
     }
 
     @Mapping(target = "id", ignore = true)
+    @Mapping(target = "doctor", ignore = true)
     @Mapping(target = "creationDate", ignore = true)
     @Mapping(target = "modifiedDate", ignore = true)
     AvailabilityEntity map(Availability availability);
+
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "doctor", ignore = true)
+    @Mapping(target = "creationDate", ignore = true)
+    @Mapping(target = "modifiedDate", ignore = true)
+    BillEntity map(Bill bill);
+
+    @Mapping(target = "appointmentFee", source = "doctor.speciality.appointmentFee")
+    Bill mapToModel(BillEntity billEntity);
 
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "rule", ignore = true)
