# src/main/java/com/nexym/clinic/infra/patient/mapper/PatientEntityMapper.java
@@ -45,8 +45,10 @@ public interface PatientEntityMapper {
     AppointmentEntity mapToAppointmentEntity(Appointment appointment);
 
     @Mapping(target = "patientId", source = "patient.id")
+    @Mapping(target = "doctorId", source = "availability.doctor.id")
     Appointment mapToAppointment(AppointmentEntity appointmentEntity);
 
+    @Mapping(target = "doctor", ignore = true)
     @Mapping(target = "creationDate", ignore = true)
     @Mapping(target = "modifiedDate", ignore = true)
     AvailabilityEntity mapToAvailabilityEntity(Availability availability);
