# src/main/resources/spec/openapi.yaml
@@ -77,6 +77,36 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /api/v1/doctors/{doctorId}/bills:
+    get:
+      summary: Retrieve bills for a specific doctor
+      operationId: getBillsByDoctorId
+      tags:
+        - Bills
+      parameters:
+        - name: doctorId
+          in: path
+          required: true
+          description: ID of the doctor to retrieve appointments for
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Bill"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
   /api/v1/doctors/{doctorId}/appointments:
     get:
       summary: Retrieve appointments for a specific doctor
@@ -489,6 +519,9 @@ components:
         appointmentDuration:
           type: integer
           format: int64
+        appointmentFee:
+          type: integer
+          format: int64
     SpecialityListResponse:
             type: array
             items:
@@ -614,6 +647,10 @@ components:
           format: int64
           description: 'Speciality of the doctor'
           example: 1
+        iban:
+          type: string
+          description: 'International Bank Account Number of the doctor'
+          example: 'FR7630001007941234567890185'
     Doctor:
       type: object
       properties:
@@ -639,8 +676,12 @@ components:
         specialityId:
           type: integer
           format: int64
+        iban:
+          type: string
         availabilities:
           $ref: "#/components/schemas/AvailabilityListResponse"
+        bills:
+          $ref: "#/components/schemas/BillListResponse"
         creationDate:
           type: string
           format: date-time
@@ -762,6 +803,9 @@ components:
         patientId:
           type: integer
           format: int64
+        doctorId:
+          type: integer
+          format: int64
     AppointmentRequest:
       type: object
       properties:
@@ -771,6 +815,27 @@ components:
         appointmentDate:
           type: string
           format: date-time
+    Bill:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        status:
+          type: string
+          enum:
+            - PENDING
+            - DONE
+        appointmentFee:
+          type: integer
+          format: int64
+        creationDate:
+            type: string
+            format: date-time
+    BillListResponse:
+      type: array
+      items:
+        $ref: "#/components/schemas/Bill"
     Error:
       type: object
       properties:
